Update stylesheet.css. Reflects corrected line spacing for <p> elements.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,14 +5,15 @@
 
 * {
   box-sizing: border-box;
+  font-family: 'handwritten-font';
+  font-size: 25px;
+  line-height: 120%;
 }
 
 body {
   margin: 60px;
   background-image: url('public/desk_effect.jpg');
   background-repeat: repeat;
-  font-family: 'handwritten-font';
-  font-size: 25px;
 }
 
 #inner {
@@ -29,53 +30,54 @@ body {
   background-size: 100% 1.2em;
 }
 
-#header {
-  background-color: #fff;
-  background-image:
-    linear-gradient(90deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px);
-  background-size: 100% 1.2em;
-  height: 75px;
-  display: grid;
-}
+  #header {
+    background-color: #fff;
+    background-image:
+      linear-gradient(90deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px);
+    background-size: 100% 1.2em;
+    height: 75px;
+    display: grid;
+  }
 
-#header-text {
-  align-self: end;
-  text-align: center;
-  margin-left: 80px;
-  margin-right: 50px;
-  font-size: 40px;
-}
+    #header-text {
+      align-self: end;
+      text-align: center;
+      margin-left: 80px;
+      margin-right: 50px;
+      font-size: 40px;
+    }
 
-#page {
-  margin-top: 15px;
-  margin-left: 80px;
-  margin-right: 50px;
-  min-height: 625px;
-  line-height: 120%;
-}
+  #page {
+    margin-top: 15px;
+    margin-left: 80px;
+    margin-right: 50px;
+    min-height: 625px;
+    line-height: 120%;
+  }
 
-#new-note-box {
-  background-color: inherit;
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
-}
+  #new-note-box {
+    padding-bottom: 2em;
+  }
 
-#text-box {
-  width: 100%;
-  height: 4.85em;
-  padding-top: 6px;
-  background-color: inherit;
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
-  border: 1px solid black;
-}
+    #text-box {
+      width: 100%;
+      height: 4.85em;
+      padding-top: 6px;
+      background-color: inherit;
+      border: 1px solid black;
+    }
 
-#create-button {
-float: right;
-}
+    #create-button {
+      float: right;
+      font-family: sans-serif;
+      font-size: 15px;
+    }
 
-#list {
-  margin: 0;
-}
+  #list {
+    padding-top: 0.25em;
+  }
+
+    p {
+      margin: 0px;
+      margin-bottom: 1.2em;
+    }
